[tool.poetry]
name = "import-g-code"
version = "2.0.0"
description = "Imports G-code files into Blender as a collection of layers which can then be animated or exported."
authors = ["Senthur Raj <imsenthur@gmail.com>", "Christopher Kumm <chrislkumm@protonmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
"fake-bpy-module-3.3" = "^20221006"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
